<resources>
    <string name="app_name">SoftwareEngineerProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="agt_pos_and_inventory_system">AGT administrator application</string>
    <string name="products">Inventory</string>
    <string name="sales">Sales</string>
    <string name="reports">Reports</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="green_house">Green House</string>
    <string name="hydroponics">Hydroponics</string>
    <string name="others">Others</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="enter_product_name_here">Enter Product Name Here</string>
    <string name="enter_product_description_here">Enter Product Description here</string>
    <string name="enter_product_price_here_php">Enter product price here PHP</string>
    <string name="enter_number_of_stocks_here">Enter number of Stocks here</string>
    <string name="enter_product_category_here">Enter product category here</string>
    <string name="product_name_here">Product Name Here</string>
    <string name="number_of_stocks_left">Number of stocks left:</string>
    <string name="product_stock_number">Product stock number</string>
    <string name="search_product_name">Search Product Name</string>
    <string name="project_automation_of_company_agt_to_be_passed_for_software_engineering_1">Project Automation of Company AGT to be passed for Software Engineering 1</string>
    <string name="_0">0</string>
    <string name="welcome">Welcome!</string>
    <string name="name_here">Name here</string>
    <string name="user_id">User ID</string>
    <string name="full_name">Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="re_enter_your_password">Re-enter your Password</string>
    <string name="enter_full_name_here">Enter Full name here</string>
    <string name="add_user">Add User</string>
    <string name="orders">Orders</string>
    <string name="edit_information_here">Edit Information Here</string>
</resources>