<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardView_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:clickable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProduct_id"
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"
            android:layout_margin="5dp"/>

        <TextView
            android:textColor="#000000"
            android:id="@+id/txtProduct_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_name_here"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/number_of_stocks_left" />

        <TextView
            android:textColor="#000000"
            android:id="@+id/txtProduct_stocks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:text="@string/product_stock_number" />

    </LinearLayout>

</androidx.cardview.widget.CardView>