<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    tools:context=".View.UsersView.UsersAddActivityView">

    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="#000000"
        android:id="@+id/toolbar"
        app:title="Add new Users"
        android:background="#f9b207"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>
    <com.google.android.material.progressindicator.ProgressIndicator
        android:id="@+id/progressBar_AddNewUsers"
        style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Indeterminate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?actionBarSize"
        android:elevation="10dp"
        app:indicatorColor="#FD0303"
        tools:targetApi="lollipop" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:id="@+id/image_profile"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="10dp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_username"
            style="@style/LoginTextInputLayoutStyle"
            android:hint="@string/enter_username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="10dp"
            android:id="@+id/txt_password1"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_here">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="10dp"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_password2"
            android:hint="@string/re_enter_your_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="10dp"
            android:layout_marginTop="100dp"
            android:id="@+id/txt_fullName"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name_here">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_margin="10dp"
            android:id="@+id/btn_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user"/>
    </LinearLayout>



</RelativeLayout>